.golden/6874382203897971272/golden

INITIALPATH:7:11: error:
    • INITIALPATH:7:24:
  |
7 | main = [f|hello { world|]
  |                        ^
unexpected end of input
expecting ':' or '}'

    • In the quasi-quotation: [f|hello { world|]
  |
7 | main = [f|hello { world|]
  |           ^^^^^^^^^^^^^^^
